add project to gitHub

--- a/Familiarize with GitHub/index.html
+++ b/Familiarize with GitHub/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Familiarize with GitHub</title>
+	<title>Familiarize wiht GitHub</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
